usb-printer-sharing: remove unused images, change the title

--- a/config.yaml
+++ b/config.yaml
@@ -43,7 +43,7 @@ params:
       Content: |
         And this is my notebook focused on Software Engineering ⌨️.
 
-        The notes you will find here are guides I mainly keep for myself, but feel free to help yourself too.
+        The notes you will find here are guides and ramblings I mainly keep for myself, but feel free to help yourself too.
 
         ---
         You might also be interested in [ContainerTabsSidebar for Firefox](https://addons.mozilla.org/en-US/firefox/addon/container-tabs-sidebar/).
