--- a/config.yaml
+++ b/config.yaml
@@ -36,6 +36,7 @@ params:
   ShowPostNavLinks: true
   ShowBreadCrumbs: false
   ShowCodeCopyButtons: false
+  comments: true
   showtoc: true
   tocopen: false
   homeInfoParams:
